# deal89-backend

./: .env  .replit  CNAME  main.py  pyproject.toml  replit.md
DealStream/: .env  README.md  main.py  requirements.txt
DealStream/scrapers/: amazon.py  bigbasket.py  flipkart.py  jiomart.py  myntra.py  swiggy.py
DealStream/static/: index.html
attached_assets/: Pasted-Build-a-real-time-deal-aggregator-website-using-Python-FastAPI-with-frontend-and-backend-structure-1753768454030_1753768454031.txt
scrapers/: __init__.py  amazon.py  bigbasket.py  flipkart.py  jiomart.py  myntra.py  swiggy.py
static/: index.html  script.js  style.css
